--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index"
   },
   "keywords": [],
-  "author": "",
+  "author": "Shyam",
   "license": "ISC",
   "description": "",
   "dependencies": {
